corrected displayCard scrolling by setting both main and displayCard to overflow auto, various other minor adjustments. renamed cutom property to '--card-columns'

--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,19 @@
 body, html {
     height: auto;
     width: auto;
-    --grid-template-columns: minmax(50px, 300px);
+    --card-columns: 200px;
 }
 
 body * {
     border: 1px solid black;
+    /* border: 2px solid magenta;  */
+    /* overflow: auto; */
 }
+
+/* body {
+    overflow: auto;
+} */
+
 
 .container {
     height: 100vh;
@@ -23,6 +30,7 @@ body * {
     "header header"
     "sideNav main"
     "footer footer";
+    overflow: auto;
 
 }
 
@@ -41,7 +49,7 @@ body * {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* overflow: auto; */  
+    overflow: auto;  
     border: 1px solid red;
 }
 
@@ -56,6 +64,7 @@ body * {
     border: 1px solid black;
     /* overflow: visible; */
     border: 2px solid orange;
+    /* overflow: auto; */
 
 
 }
@@ -66,25 +75,27 @@ body * {
     padding-top: 10px;
     height: 100%;
     width: 100%;
+
     /* max-height: 400%; */
     /* white-space: pre-line; */
     /* grid-auto-flow: column; */
-    grid-template-columns: repeat(4, var(--grid-template-columns));
-    grid-template-rows: repeat(auto-fit, calc(var(--grid-template-columns) * 1.475));
-    grid-auto-columns: var(--grid-template-columns);
-    grid-auto-rows: calc(var(--grid-template-columns) * 1.475);
+    grid-template-columns: repeat(4, var(--card-columns));
+    grid-template-rows: repeat(auto-fill, calc(var(--card-columns) * 1.475));
+    grid-auto-columns: var(--card-columns);
+    grid-auto-rows: calc(var(--card-columns) * 1.475);
     gap: 25px;
-    /* overflow: visible; */
-
-    
-
+    overflow: auto;
+    border: 2px solid magenta;
 }
 
 .footer {
     grid-area: footer;
+    border: 2px solid magenta;
+    overflow: auto;
 }
 
 #displayCard>div {
+    height: calc(var(--card-columns) * 1.475);
     border: 1px solid black;
     display: grid;
     grid-template-columns: 1fr;
@@ -98,6 +109,7 @@ body * {
     grid-template-areas: 
     "cont";
     column-gap: 25px;
+    overflow: auto;
 
 }
 /* 
